--- a/BlckSchls/Refresher Notebook on Binomial Pricing Model.ipynb
+++ b/BlckSchls/Refresher Notebook on Binomial Pricing Model.ipynb
@@ -242,7 +242,7 @@
    "source": [
     "### Notice that the risk-neutral probabilites are not actually 0.5 but slightly different.\n",
     "\n",
-    "### Also, notice that the price option still rounded. This is because it's extremely close to $9.39. Observe the following:"
+    "### Also, notice that the price option still rounded. This is because it's extremely close to `$9.39`. Observe the following:"
    ]
   },
   {
@@ -396,8 +396,17 @@
     "\n",
     "$\\begin{equation*} \n",
     "60 + 1.27 = PV(61) + 3.17\\\\\n",
-    "61.27 = \\frac{61}{1+R} + 3.17\\\\\n",
-    "61.27 = \\frac{61}{1+0.05} + 3.17\\\\\n",
+    "\\end{equation*}$\n",
+    "\n",
+    "$\\begin{equation*} \n",
+    "61.27 = \\frac{61}{1+R} + 3.17\n",
+    "\\end{equation*}$\n",
+    "\n",
+    "$\\begin{equation*} \n",
+    "61.27 = \\frac{61}{1+0.05} + 3.17\n",
+    "\\end{equation*}$\n",
+    "\n",
+    "$\\begin{equation*} \n",
     "61.27 = 61.27\n",
     "\\end{equation*}$\n",
     "\n",
