ninja edits to option.py and other stuff

--- a/AllThingsOptions/Multiperiod Binomial Pricing Notebook.ipynb
+++ b/AllThingsOptions/Multiperiod Binomial Pricing Notebook.ipynb
@@ -29,7 +29,7 @@
     "## A couple things before starting\n",
     "\n",
     "### First thing to change is describing the risk-free in terms of continous compounding. \n",
-    "In the Binomial Pricing model notebook I used `5.13%` as the annual risk-free rate. Where did that number come from? It comes from $e^{0.05}$ which equals `1.051271`... which is pretty much `5.13%` return. Very sneaky. But this will save headache later when working with smaller time frames. I'll update the binomial pricing code to reflect that in the main release.\n",
+    "In the Binomial Pricing model notebook I used `5.13%` as the annual risk-free rate. Where did that number come from? It comes from $e^{0.05}$ which equals `1.051271`... which is pretty much `5.13%` return. Very sneaky. But this will save headache later when working with smaller time frames. I'll update the binomial pricing code to reflect that in the main release. Or should I leave it as is, a non-desriptive interest rate? Ah, these descisions are hard to make on my own!... \n",
     "\n",
     "### Introducing Up and down factors."
    ]
