--- a/AllThingsOptions/Single Period Binomial Pricing Notebook.ipynb
+++ b/AllThingsOptions/Single Period Binomial Pricing Notebook.ipynb
@@ -34,7 +34,7 @@
     "\n",
     "This is the most rudimentary option pricing model out there. It seeks to measure the price of an option by describing its characteristics using only two different payoff states each with their own probability of occuring. More on that in a bit. In short the binomial pricing model is useful in demonstrating how to approximate an option price, how to calculate risk-neutral probabilities, and illustrates the logic needed in approximating solutions where no explicit analytical solution exists (like for American Puts).\n",
     "### A note:\n",
-    "The examples I will be using can be found in *An Introduction to Derivative Securities, Financial Markets, and Risk Management* by Robert Jarrow and Arkadev Chatterjea. I'm not going to show the binomial tree diagrams (that might change in the future). If you are a visual learner I highly recommend you attempt to draw your own to build familiarity. [Here](https://xplaind.com/552187/binomial-options-pricing-model) is a short guide showing how the numerical values interact. Additionally,  Investopedia is a good place to start as they show how to visualize multi-period binomial tree diagrams in Excel which can be found [here](https://www.investopedia.com/terms/b/binomialoptionpricing.asp). "
+    "The main example I will be using can be found in *An Introduction to Derivative Securities, Financial Markets, and Risk Management* by Robert Jarrow and Arkadev Chatterjea. I'm not going to show the binomial tree diagrams (that might change in the future). If you are a visual learner I highly recommend you attempt to draw your own to build familiarity. [Here](https://xplaind.com/552187/binomial-options-pricing-model) is a short guide showing how the numerical values interact. Additionally,  Investopedia is a good place to start as they show how to visualize multi-period binomial tree diagrams in Excel which can be found [here](https://www.investopedia.com/terms/b/binomialoptionpricing.asp). "
    ]
   },
   {
@@ -62,7 +62,7 @@
     "\n",
     "# Still need to finish transcribing my notes to this notebook...\n",
     "\n",
-    "# But, here's the final product of my notes:\n"
+    "# But, here's the final product of my notes:"
    ]
   },
   {
@@ -439,49 +439,69 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Everything checks out"
+    "# Everything checks out\n",
+    "\n",
+    "I dropped the class code into its own file called `options.py` Below shows a simple use of the module. I have another notebook to see the most up to date usage of the options.py file. Go check it out"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 19,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "ModuleNotFoundError",
-     "evalue": "No module named 'options'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mModuleNotFoundError\u001b[0m                       Traceback (most recent call last)",
-      "\u001b[1;32m<ipython-input-19-acf01a59704f>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[1;32m----> 1\u001b[1;33m \u001b[1;32mimport\u001b[0m \u001b[0moptions\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[1;31mModuleNotFoundError\u001b[0m: No module named 'options'"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "import options"
+    "from allthingsoptions import options"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
-     "ename": "NameError",
-     "evalue": "name 'BinomialOption' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[1;32m<ipython-input-15-de04d22c49ad>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[1;32m----> 1\u001b[1;33m \u001b[0mb_call_test\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mBinomialOption\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;36m100\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;36m110\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;36m120\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;36m90.25\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;36m0.0513\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;34m'Put'\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[1;31mNameError\u001b[0m: name 'BinomialOption' is not defined"
-     ]
+     "name": "stdout",
+     "output_type": "stream",
+     "text": "The following values are for a single period Call option where the underlying value is 100, a strike price of 110, an up value of 120, \na down value of 90.25, and a risk free rate of 0.0513%. All outputs are rounded to 2 decimal places. \n\n------------------------\nCall Option Information\n------------------------\nCalculated Option Price: 4.76\nCalculated Hedge Ratio: 0.34\nCalculated present value of bond position: -28.86\nUp state payoff is 10 and down state payoff is 0\nCalculated risk neutral probability for up state is 0.5 and for down state risk neutral probability is 0.5\n"
     }
    ],
    "source": [
-    "b_call_test = BinomialOption(100, 110, 120, 90.25, 0.0513, 'Put')"
+    "b_call_test = options.BinomialOption(100, 110, 120, 90.25, 0.0513)\n",
+    "\n",
+    "b_call_test.print_calc_values()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": "The following values are for a single period Call option where the underlying value is 100, a strike price of 110, an up value of 120, \na down value of 90, and a risk free rate of 0.1%. All outputs are rounded to 2 decimal places. \n\n------------------------\nCall Option Information\n------------------------\nCalculated Option Price: 6.06\nCalculated Hedge Ratio: 0.33\nCalculated present value of bond position: -27.27\nUp state payoff is 10 and down state payoff is 0\nCalculated risk neutral probability for up state is 0.67 and for down state risk neutral probability is 0.33\n"
+    }
+   ],
+   "source": [
+    "single_period_call = options.BinomialOption(100, 110, 120, 90, 0.10, 'Call')\n",
+    "single_period_call.print_calc_values()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": "27.27272727272727"
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "30/1.1"
    ]
   },
   {
