class overhaul and binomial test

--- a/AllThingsOptions/options_file_guide.ipynb
+++ b/AllThingsOptions/options_file_guide.ipynb
@@ -25,7 +25,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Guide to using `options.py`\n",
+    "# Guide to using `options.py` (this guide is already outdated...)\n",
     "---\n",
     "## Class: BinomialOption\n",
     "Description a work in progress\n"
