a basket of edits

--- a/Notebooks/Single Period Binomial Pricing Notebook.ipynb
+++ b/Notebooks/Single Period Binomial Pricing Notebook.ipynb
@@ -441,67 +441,7 @@
    "source": [
     "# Everything checks out\n",
     "\n",
-    "I dropped the class code into its own file called `options.py` Below shows a simple use of the module. I have another notebook to see the most up to date usage of the options.py file. Go check it out"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 19,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from allthingsoptions import options"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 20,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": "The following values are for a single period Call option where the underlying value is 100, a strike price of 110, an up value of 120, \na down value of 90.25, and a risk free rate of 0.0513%. All outputs are rounded to 2 decimal places. \n\n------------------------\nCall Option Information\n------------------------\nCalculated Option Price: 4.76\nCalculated Hedge Ratio: 0.34\nCalculated present value of bond position: -28.86\nUp state payoff is 10 and down state payoff is 0\nCalculated risk neutral probability for up state is 0.5 and for down state risk neutral probability is 0.5\n"
-    }
-   ],
-   "source": [
-    "b_call_test = options.BinomialOption(100, 110, 120, 90.25, 0.0513)\n",
-    "\n",
-    "b_call_test.print_calc_values()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 21,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": "The following values are for a single period Call option where the underlying value is 100, a strike price of 110, an up value of 120, \na down value of 90, and a risk free rate of 0.1%. All outputs are rounded to 2 decimal places. \n\n------------------------\nCall Option Information\n------------------------\nCalculated Option Price: 6.06\nCalculated Hedge Ratio: 0.33\nCalculated present value of bond position: -27.27\nUp state payoff is 10 and down state payoff is 0\nCalculated risk neutral probability for up state is 0.67 and for down state risk neutral probability is 0.33\n"
-    }
-   ],
-   "source": [
-    "single_period_call = options.BinomialOption(100, 110, 120, 90, 0.10, 'Call')\n",
-    "single_period_call.print_calc_values()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 9,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": "27.27272727272727"
-     },
-     "execution_count": 9,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "30/1.1"
+    "This is the end of this notebook on building out the single period binomial pricing model. All of this probably outdated."
    ]
   },
   {
