actual fix for percentage display issue

--- a/Notebooks/Binomial Opts Guide.ipynb
+++ b/Notebooks/Binomial Opts Guide.ipynb
@@ -33,7 +33,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -53,18 +53,20 @@
    "source": [
     "The `BinomialOptions` class has 2 sub classes called `CallOption` and `PutOption`\n",
     "\n",
-    "Consider a non-dividend-paying stock, currently trading at `$ 125` per share. In one year it will have either gone up by `$ 25` or gone down by `$ 25`. Given a strike price of `$ 135`, and a continously-compounded risk-free rate of 8%, what would the premium be for a European style call option written for this stock? "
+    "Consider a non-dividend-paying stock, currently trading at `$ 125` per share. In one year it will have either gone up by `$ 25` or gone down by `$ 25`. Given a strike price of `$ 135`, and a continously-compounded risk-free rate of 8%, what would the premium be for a European style call option written for this stock? \n",
+    "\n",
+    "The answer should be about 9.81"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
-     "text": "===============================================================================\n  INFORMATION FOR A SINGLE PEIORD CALL OPTION USING BINMOMIAL PRICING METHOD\n===============================================================================\n\nThe calculations below are for a single period CALL option where the underlying value is 125, \nwith a strike price of 135, an up price of 150, a down price of 100, and a risk free rate of 0.08328706767495864%.\nAll outputs are rounded to 2 decimal places.  \n\n--------------\nCalculations\n--------------\nCalculated Option Price: 9.81\nCalculated Hedge Ratio: 0.3\nCalculated present value of bond position: -27.69\nUp state payoff is 15 and down state payoff is 0\nCalculated risk neutral probability for up state is 0.71 and for down state risk neutral probability is 0.29\n_____________________________________________________________________________________________________________\n\n"
+     "text": "===============================================================================\n  INFORMATION FOR A SINGLE PEIORD CALL OPTION USING BINMOMIAL PRICING METHOD\n===============================================================================\n\nThe calculations below are for a single period CALL option where the underlying value is 125, \nwith a strike price of 135, an up price of 150, a down price of 100, and a risk free rate of 8.329%.\nAll outputs are rounded to 2 decimal places.  \n\n--------------\nCalculations\n--------------\nCalculated Option Price: 9.81\nCalculated Hedge Ratio: 0.3\nCalculated present value of bond position: -27.69\nUp state payoff is 15 and down state payoff is 0\nCalculated risk neutral probability for up state is 0.71 and for down state risk neutral probability is 0.29\n_____________________________________________________________________________________________________________\n\n"
     }
    ],
    "source": [
@@ -85,35 +87,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
-     "text": "===============================================================================\n  INFORMATION FOR A SINGLE PEIORD PUT OPTION USING BINMOMIAL PRICING METHOD\n===============================================================================\n\nThe calculations below are for a single period PUT option where the underlying value is 125, \nwith a strike price of 135, an up price of 150, a down price of 100, and a risk free rate of 0.08328706767495864%.\nAll outputs are rounded to 2 decimal places.  \n\n--------------\nCalculations\n--------------\nCalculated Option Price: 9.43\nCalculated Hedge Ratio: -0.7\nCalculated present value of bond position: 96.93\nUp state payoff is 0 and down state payoff is 35\nCalculated risk neutral probability for up state is 0.71 and for down state risk neutral probability is 0.29\n_____________________________________________________________________________________________________________\n\n"
+     "text": "===============================================================================\n  INFORMATION FOR A SINGLE PEIORD PUT OPTION USING BINMOMIAL PRICING METHOD\n===============================================================================\n\nThe calculations below are for a single period PUT option where the underlying value is 125, \nwith a strike price of 135, an up price of 150, a down price of 100, and a risk free rate of 8.329%.\nAll outputs are rounded to 2 decimal places.  \n\n--------------\nCalculations\n--------------\nCalculated Option Price: 9.43\nCalculated Hedge Ratio: -0.7\nCalculated present value of bond position: 96.93\nUp state payoff is 0 and down state payoff is 35\nCalculated risk neutral probability for up state is 0.71 and for down state risk neutral probability is 0.29\n_____________________________________________________________________________________________________________\n\n"
     }
    ],
    "source": [
     "put_example = PutOption(125, 135, 150, 100, cont_comp_int_rate)\n",
     "put_example.print_calc_values()"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 15,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": "35"
-     },
-     "execution_count": 15,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": []
   },
   {
    "cell_type": "code",
