test to embed images

--- a/Notebooks/MultPeriod Notebook.ipynb
+++ b/Notebooks/MultPeriod Notebook.ipynb
@@ -7,7 +7,8 @@
    "codemirror_mode": {
     "name": "ipython",
     "version": 3
-   }
+   },
+   "version": "3.7.3"
   },
   "orig_nbformat": 2,
   "file_extension": ".py",
@@ -18,6 +19,19 @@
   "version": 3
  },
  "cells": [
+  {
+   "cell_type": "markdown",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Going to demonstrate *\"chaining\"* the binomial option pricing method over an arbitrary timeframe to show how it can approximate Black-Scholes.\n",
+    "\n",
+    "But first, I need to figure out how to embed an image in this notebook. \n",
+    "\n",
+    "![title](multiperiodexample.png)"
+   ]
+  },
   {
    "cell_type": "code",
    "execution_count": null,
