massive rebranding and readme update

--- a/Notebooks/Binomial Opts Guide.ipynb
+++ b/Notebooks/Binomial Opts Guide.ipynb
@@ -38,8 +38,8 @@
    "outputs": [],
    "source": [
     "# from this package\n",
-    "from allthingsoptions.options.calloption import CallOption\n",
-    "from allthingsoptions.options.putoption import PutOption\n",
+    "from atop.options.calloption import CallOption\n",
+    "from atop.options.putoption import PutOption\n",
     "\n",
     "# one other thing:\n",
     "import math"
@@ -100,13 +100,6 @@
     "put_example = PutOption(125, 135, 150, 100, cont_comp_int_rate)\n",
     "put_example.print_calc_values()"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ]
 }
