add more markdown, add new class

--- a/Notebooks/MultPeriod Notebook.ipynb
+++ b/Notebooks/MultPeriod Notebook.ipynb
@@ -93,9 +93,10 @@
     "\n",
     "\\* Side question. If possible, at what point will the option price be higher than `$ 6.42`?\n",
     "\n",
-    "So are we on track to actually solve this problem? Suprisingly, yes. There is an unstated assumption we got correct; using the single period bionmial option pricing method. Think of the method first and foremost as a tool. Every tool has a time and place. \"A screwdriver isn't useful as a hammer.\" Rather than retool our method, let's change where and when we use it.  \n",
+    "# Have we hit a dead end?\n",
     "\n",
-    "# A helpful visualization:\n",
+    "Suprisingly, no. We are actually heading in the right direction. There is an unstated assumption we got correct; using the single period bionmial option pricing method. Think of the method first and foremost as a tool. Every tool has a time and place. \"A screwdriver isn't useful as a hammer.\" Rather than retool our method, let's change where and when we use it. Before we do that though I want to draw your attention to something and then we will get back to pricing this option.\n",
+    "\n",
     "If you haven't noticed it yet then let me point it out; the tree appears to be several different options *chained* together. Let's seperate out these options. \n",
     "\n",
     "### Let's call this the 'up' option.\n",
@@ -112,15 +113,85 @@
     "\n",
     "![The 'Starting' Option](img/start_option_example.png)\n",
     "\n",
-    "When we break out the original tree into distinct single period options, suddenly the tasks looks a lot more solvable. Let's try using the single period binomial option pricing now and see where that gets us."
+    "When we break out the original tree into distinct single period options, suddenly the tasks looks a lot more solvable. Let's try using the single period binomial option pricing now and see where that gets us.\n",
+    "\n",
+    "# Pricing the 'up' option:\n",
+    "I'll save you the trouble of scrolling up and hunting for the values we need for this calculation. Here's what we have:\n",
+    "\n",
+    "* Stock Price: `$ 110`\n",
+    "* Strike Price: `$ 110` (that is, currently the underlying price is the same as the strike price).\n",
+    "* up value is `$ 121`\n",
+    "* down value is `$ 104.50`\n",
+    "* and the risk-free rate for the period is `0.05`\n",
+    "\n",
+    "Using the `CallOption()` class I wrote, we find the following:"
    ]
   },
   {
    "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": "===============================================================================\n  INFORMATION FOR A SINGLE PEIORD CALL OPTION USING BINMOMIAL PRICING METHOD\n===============================================================================\n\nThe calculations below are for a single period CALL option where the underlying value is 110, \nwith a strike price of 110, an up price of 121, a down price of 104.5, and a risk free rate of 5.0%.\nAll outputs are rounded to 2 decimal places.  \n\n--------------\nCalculations\n--------------\nCalculated Option Price: 6.98\nCalculated Hedge Ratio: 0.67\nCalculated present value of bond position: -66.35\nUp state payoff is 11 and down state payoff is 0\nCalculated risk neutral probability for up state is 0.67 and for down state risk neutral probability is 0.33\n_____________________________________________________________________________________________________________\n\n"
+    }
+   ],
+   "source": [
+    "up_opt = CallOption(110, 110, 121, 104.50, 0.05)\n",
+    "up_opt.print_calc_values()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "From the terminal printout we can see that the fair price for the call option at t1 when in the up state is `$ 6.98`\n",
+    "\n",
+    "# Pricing the 'down' option:\n",
+    "\n",
+    "* Stock Price: `$ 95`\n",
+    "* Strike Price: `$ 110` (that is, currently the underlying price is below the strike price).\n",
+    "* up value is `$ 104.50`\n",
+    "* down value is `$ 90.25`\n",
+    "* and the risk-free rate for the period is `0.05`\n",
+    "\n",
+    "Without even running my code I know that the call option's value is worthless as it is already below the strike price and will never rise above the strike price. Don't believe me? Observe:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": "===============================================================================\n  INFORMATION FOR A SINGLE PEIORD CALL OPTION USING BINMOMIAL PRICING METHOD\n===============================================================================\n\nThe calculations below are for a single period CALL option where the underlying value is 95, \nwith a strike price of 110, an up price of 104.5, a down price of 90.25, and a risk free rate of 5.0%.\nAll outputs are rounded to 2 decimal places.  \n\n--------------\nCalculations\n--------------\nCalculated Option Price: 0.0\nCalculated Hedge Ratio: 0.0\nCalculated present value of bond position: 0.0\nUp state payoff is 0 and down state payoff is 0\nCalculated risk neutral probability for up state is 0.67 and for down state risk neutral probability is 0.33\n_____________________________________________________________________________________________________________\n\n"
+    }
+   ],
+   "source": [
+    "down_opt = CallOption(95, 110, 104.50, 90.25, 0.05)\n",
+    "down_opt.print_calc_values()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "From the terminal printout we can see that the value of the vall option in the down state is... drum roll... `0.00`. \n",
+    "\n",
+    "Great looks like we've got this down. Now we just do the same thing to find today's price, correct?\n",
+    "\n",
+    "Nope.\n",
+    "\n",
+    "# Pricing the option today: the twist\n"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -155,9 +226,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# temp writing space.\n",
-    "\n",
-    "Here's why. The single period binomial pricing model accurately prices an option for an *arbitrary* period of time. Notice that at no point in my code do I ask for a time to expiration date. One would assume that this was because the code could only be used for 1 year time periods. In fact, this is not the case. Additionally, the risk-free rate is *not* denoted as an annual risk-free rate but instead as simply, the risk free rate. Lastly, did you notice that each class has an override ability? By default, the code assumes it can calculate the payoffs from the difference in the strike price and the up and down values. So one would think you never need to override the payoffs. But that's not the case for multi-period \n"
+    "# Generalizing this approach."
    ]
   },
   {
